Move Team data to main.py for autocomplete purposes (temporary?). Stop titles being really wide for long team name (they now wrap instead)

--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,7 @@ div#container {
   max-width: 1366px;
   margin: auto;
 }
+
+h1 {
+  max-width: 500px;
+}
